@@ -1,6 +1,7 @@
 package cn.har01d.alist_tvbox.service;
 
 import cn.har01d.alist_tvbox.exception.BadRequestException;
+import cn.har01d.alist_tvbox.util.Utils;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.io.FileUtils;
 import org.springframework.core.io.FileSystemResource;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.nio.file.Files;
@@ -19,16 +19,16 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
 @Slf4j
 @Service
 public class IndexFileService {
-    public Page<String> getIndexContent(Pageable pageable, String siteId) throws IOException {
-        Path file = Paths.get("/data/index", siteId, "custom_index.txt");
+    public Page<String> getIndexContent(Pageable pageable, String siteId, String index) throws IOException {
+        List<String> list = new ArrayList<>();
+        Path file = Paths.get("/data/index", siteId, index + ".txt");
         if (!Files.exists(file)) {
-            throw new BadRequestException("索引文件不存在");
+            return new PageImpl<>(list);
         }
 
         List<String> lines = Files.readAllLines(file);
@@ -39,7 +39,6 @@ public class IndexFileService {
             end = lines.size();
         }
 
-        List<String> list = new ArrayList<>();
         if (start < end) {
             list = lines.subList(start, end);
         }
@@ -47,11 +46,11 @@ public class IndexFileService {
         return new PageImpl<>(list, pageable, lines.size());
     }
 
-    public void toggleExcluded(String siteId, int index) throws IOException {
+    public void toggleExcluded(String siteId, int index, String indexName) throws IOException {
         if (index < 0) {
             throw new BadRequestException("行数不正确");
         }
-        Path file = Paths.get("/data/index", siteId, "custom_index.txt");
+        Path file = Paths.get("/data/index", siteId, indexName + ".txt");
         if (!Files.exists(file)) {
             throw new BadRequestException("索引文件不存在");
         }
@@ -79,49 +78,13 @@ public class IndexFileService {
         try (FileOutputStream fos = new FileOutputStream(out);
              ZipOutputStream zipOut = new ZipOutputStream(fos)) {
             File fileToZip = new File("/data/index/" + siteId);
-            zipFile(fileToZip, fileToZip.getName(), zipOut);
+            Utils.zipFile(fileToZip, fileToZip.getName(), zipOut);
         }
         return new FileSystemResource(out);
     }
 
-    private static void zipFile(File fileToZip, String fileName, ZipOutputStream zipOut) throws IOException {
-        if (fileToZip.isHidden()) {
-            return;
-        }
-
-        if (fileToZip.isDirectory()) {
-            if (fileName.endsWith("/")) {
-                zipOut.putNextEntry(new ZipEntry(fileName));
-                zipOut.closeEntry();
-            } else {
-                zipOut.putNextEntry(new ZipEntry(fileName + "/"));
-                zipOut.closeEntry();
-            }
-
-            File[] children = fileToZip.listFiles();
-            if (children == null) {
-                return;
-            }
-
-            for (File childFile : children) {
-                zipFile(childFile, fileName + "/" + childFile.getName(), zipOut);
-            }
-            return;
-        }
-
-        try (FileInputStream fis = new FileInputStream(fileToZip)) {
-            ZipEntry zipEntry = new ZipEntry(fileName);
-            zipOut.putNextEntry(zipEntry);
-            byte[] bytes = new byte[4096];
-            int length;
-            while ((length = fis.read(bytes)) >= 0) {
-                zipOut.write(bytes, 0, length);
-            }
-        }
-    }
-
-    public void uploadIndexFile(String siteId, MultipartFile file) throws IOException {
-        Path temp = Path.of("/tmp/custom_index.txt");
+    public void uploadIndexFile(String siteId, String indexName, MultipartFile file) throws IOException {
+        Path temp = Paths.get("/tmp/index.txt");
         try {
             FileUtils.copyToFile(file.getInputStream(), temp.toFile());
             List<String> lines = Files.readAllLines(temp);
@@ -130,8 +93,12 @@ public class IndexFileService {
             }
 
             lines = lines.stream().map(e -> e.startsWith("./") ? e.substring(1) : e).toList();
-            String path = "/data/index/" + siteId + "/custom_index.txt";
-            Files.writeString(Path.of(path), String.join("\n", lines));
+            Path path = Paths.get("/data/index", siteId, indexName + ".txt");
+            if (!Files.exists(path)) {
+                Files.createDirectories(path.getParent());
+                Files.createFile(path);
+            }
+            Files.writeString(path, String.join("\n", lines));
             log.info("上传索引文件成功： {}", path);
         } finally {
             Files.delete(temp);
@@ -140,5 +107,10 @@ public class IndexFileService {
 
     private boolean isValid(String line) {
         return line.startsWith("-/") || line.startsWith("+/") || line.startsWith("/") || line.startsWith("./") || line.isBlank();
+    }
+
+    public void deleteIndexFile(String siteId, String indexName) throws IOException {
+        Path path = Paths.get("/data/index", siteId, indexName + ".txt");
+        Files.delete(path);
     }
 }
